cargo-features = ["edition2024"]

[package]
name = "scope-rs"
version = "0.1.0"
edition = "2024"

[build-dependencies]
glob = "0.3.1"
tonic-build = "0.11.0"
serde = { version = "1.0.197", default-features = false }

[dev-dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
libfuzzer-sys = "0.4.7"
lazy_static = "1.4.0"

[dependencies]
prost = { version = "0.12.4", features = ["derive"], default-features = false }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "signal"] }
tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["serde_derive"], default-features = false }
eyre = { version = "0.6.12", default-features = true }
clap = { version = "4.5.4", features = ["derive", "std"], default-features = true }
rustls-native-certs = "0.7.0"
base64 = { version = "0.22.0", default-features = false }
slog = "2.7.0"
slog-async = "2.8.0"
slog-json = "2.6.1"
slog-scope = "4.4.0"
futures = "0.3.30"
chrono = "0.4.38"
sled = "0.34.7"
blake3 = "1.5.1"
duckdb = { version = "0.10.2", features = ["bundled"] }
histo = "1.0.0"
prometheus = "0.13.4"
warp = "0.3.7"
log = "0.4.21"
rand = "0.8.5"
console-subscriber = "0.3.0"

[profile.dev]
incremental = true
opt-level = 1
debug = true

[profile.release]
debug = true
