# cargo-features = ["edition2024"]

[package]
name = "scope-rs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.12.0"
serde = { version = "1.0.197", default-features = false }
glob = "0.3.1"

[dependencies]
prost = { version = "0.13.1", features = ["derive"], default-features = false }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "signal"] }
tonic = { version = "0.12.0", features = ["tls", "tls-roots"] }
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["serde_derive"], default-features = false }
eyre = { version = "0.6.12", default-features = true }
clap = { version = "4.5.4", features = ["derive", "std"], default-features = true }
rustls-native-certs = "0.7.0"
base64 = { version = "0.22.0", default-features = false }
slog = "2.7.0"
slog-async = "2.8.0"
slog-json = "2.6.1"
slog-scope = "4.4.0"
futures = "0.3.30"
chrono = "0.4.38"
sled = "0.34.7"
blake3 = "1.5.1"
duckdb = { version = "1.0.0", features = ["bundled"] }
histo = "1.0.0"
prometheus = "0.13.4"
warp = "0.3.7"
rocksdb = { version = "0.22.0", features = ["default", "multi-threaded-cf", "jemalloc", "valgrind", "io-uring", "lz4", "snappy", "zstd"] }

[profile.dev]
incremental = true
opt-level = 1
debug = true
codegen-units = 256


[profile.release]
debug = true
lto = "fat"
opt-level = 3
codegen-units = 1
